--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-github-btn": "^1.2.0",
     "react-github-button": "^0.1.11",
+    "react-indiana-drag-scroll": "^2.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
