--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-star-ratings": "^2.3.0",
+    "react-tiny-link": "^3.6.1",
     "react-transition-group": "^4.4.1",
     "web-vitals": "^1.0.1"
   },
