--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ftp-deploy": "^2.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-github-btn": "^1.2.0",
+    "react-github-button": "^0.1.11",
     "react-rounded-image": "^2.0.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
