--- a/package.json
+++ b/package.json
@@ -1,34 +1,31 @@
 {
-  "name": "portofolio",
+  "name": "webpage",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.3.11",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@material-ui/core": "^4.11.3",
+    "@fontsource/vollkorn": "^4.4.5",
+    "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
-    "@material-ui/styles": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "ftp-deploy": "^2.4.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "axios": "^0.21.1",
+    "font-proxima-nova": "^1.0.1",
+    "moment": "^2.29.1",
+    "react": "^17.0.2",
+    "react-backdrop-filter": "^2.1.0",
+    "react-dom": "^17.0.2",
     "react-github-btn": "^1.2.0",
-    "react-github-button": "^0.1.11",
-    "react-rounded-image": "^2.0.11",
+    "react-page-scroller": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-scroll": "^1.8.2",
-    "react-star-ratings": "^2.3.0",
-    "react-tiny-link": "^3.6.1",
-    "react-transition-group": "^4.4.1",
+    "rss-to-json": "^1.1.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI= react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
